admin panelini ekledim profil kısmı koydum.

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -18,7 +18,7 @@
                             Kategori Sayısı
                         </div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">
-                            -
+                            @ViewBag.KategoriSayisi
                         </div>
                     </div>
                     <div class="col-auto">
@@ -42,7 +42,7 @@
                             Ürün Sayısı
                         </div>
                         <div class="h5 mb-0 font-weight-bold text-gray-800">
-                            -
+                            @ViewBag.UrunSayisi
                         </div>
                     </div>
                     <div class="col-auto">
