--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -122,6 +122,8 @@
                             </a>
                             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="/Account/Logout">Çıkış Yap</a>
+                                <a class="dropdown-item" href="/Admin/Profile">Profilim</a>
+                                <div class="dropdown-divider"></div>
                             </div>
                         </li>
                     </ul>
