--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -45,7 +45,7 @@
         <div class="text-right">
             <a asp-controller="Product" asp-action="Index" class="btn btn-secondary">Alışverişe Devam Et</a>
 
-            <a href="#" class="btn btn-success">Siparişi Tamamla</a>
+            <a asp-controller="Order" asp-action="Checkout" class="btn btn-success">Siparişi Tamamla</a>
         </div>
     }
     else
