--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -58,9 +58,9 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <span class="nav-link text-dark fw-bold">
+                                <a class="nav-link text-dark fw-bold" asp-controller="Account" asp-action="Profile">
                                     <i class="fas fa-user"></i> Merhaba, @User.Identity.Name
-                                </span>
+                                </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link btn btn-link text-danger" asp-controller="Account" asp-action="Logout">
@@ -73,6 +73,11 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">
                                     <i class="fas fa-sign-in-alt"></i> Giriş Yap
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-primary fw-bold" asp-controller="Account" asp-action="Register">
+                                    <i class="fas fa-user-plus"></i> Kayıt Ol
                                 </a>
                             </li>
                         }
